--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- HTML Meta Tags -->
+    <title>Lazy L</title>
+    <meta name="description" content="For the lazy lil bro">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://lazyl.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Lazy L">
+    <meta property="og:description" content="For the lazy lil bro">
+    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/5692/5692446.png">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="lazyl.vercel.app">
+    <meta property="twitter:url" content="https://lazyl.vercel.app/">
+    <meta name="twitter:title" content="Lazy L">
+    <meta name="twitter:description" content="For the lazy lil bro">
+    <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/5692/5692446.png">
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <style>
       * {
         box-sizing: border-box;
